--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/components/svgs/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JN Construction - Building Dreams Since 1998</title>
+    <title>M. G. ENTERPRISES - Building Dreams Since 2008</title>
   </head>
   <body>
     <div id="root"></div>
